--- a/static/css/style-contacto.css
+++ b/static/css/style-contacto.css
@@ -53,7 +53,6 @@ header{
     position: absolute;
     right: 10px;
 }
-
 .modo{
     width: 12%;
     display: flex;
@@ -82,8 +81,9 @@ header{
     margin-top: 2rem;
     overflow: hidden;
     border: rgb(255, 255, 255) 2px double;
-    height: 28rem;
+    height: 30rem;
     color: white;
+    padding-top: 2rem;
     text-align: center;  
     justify-content: center;
     align-items: center;
@@ -93,45 +93,6 @@ header{
     box-shadow: -11px 11px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -11px 11px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -11px 11px 5px 0px rgba(0,0,0,0.75);
-}
-.text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 80%;
-    width: 60%; /* Centra el texto */
-    background-color: #85858538;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.438);
-}
-
-.text h2 {
-    margin-bottom: 4px;
-    font-size: 2.4rem;
-    color: #ffffff;
-}
-
-.text p {
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 1.4rem;
-    max-width: 600px;
-    color: #ffffff;
-}
-
-.text a {
-    text-decoration: none;
-    font-size: 18px;
-    color: white;
-    background-color: #05ad52;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.text a:hover {
-    background-color: #05ad52;
 }
 .android{
     width: 410px;
@@ -152,10 +113,93 @@ header{
     transform: translate(-50%, -50%);
     transform: rotate(-10deg);
 }
+.text-precentation{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+.text-precentation h2 {
+    margin: 0;
+    transform: translateY(-50px);
+    font-size: 2.5em;
+}
+.text-precentation p {
+    transform: translateY(-30px);
+    margin: 0;
+    max-width: 800px;
+    font-size: x-large;
+}
+.text-precentation a {
+    transform: translateY(20px);
+    margin-top: 1rem;
+    padding-top: 1rem;
+    font-size: x-large;
+    text-decoration: none;
+    color: white;
+}
 .text-precentation a:hover {
     text-decoration: underline;
     color: rgba(25, 0, 255, 0.733);
     font-weight: bold;
+}
+.text-precentation h3{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 2.4rem;;
+}
+form {
+    margin-bottom: 0;
+    background-color: #85858538;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.438);
+    max-width: 700px;
+    width: 100%;
+}
+
+label {
+    display: block;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #ffffff;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    background-color: #ffffff11;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+    border-color: #05ad52;
+    outline: none;
+    box-shadow: 0 0 5px rgba(5, 173, 82, 0.3);
+    background-color: whitesmoke;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #05ad52;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #049b48;
 }
 footer{
     margin-top: 1rem;
