--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,9 @@ header{
     height: 10vh;
     border-radius: 10px;
     border-bottom:  white 1px inset;
+    box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
 }
 
 .android{
@@ -38,8 +41,8 @@ header{
 .container-tittle .img-logo{
     opacity: 0.7;
     max-width: 100%;
-    width: 21rem;
-    height: 5.5rem;
+    width: 22rem;
+    height: 5.6rem;
 }
 .container-nav {
     margin-top: 8px;
@@ -50,24 +53,25 @@ header{
     background-color: #3333336c;
     padding: 20px;
     border-radius: 10px;
-    border: white 1px inset;
+    border: white 2px double;
+    box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -11px 3px 5px 0px r
 }
 .container-nav a {
     font-family: "Roboto";
     margin: 0 30px;
     color: white;
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1.3em;
+}
+.container-nav a:hover{
+    text-decoration: underline;
+    font-size: 1.4;
 }
 .container-nav .modo {
     position: absolute;
     right: 10px;
-}
-
-.container-nav .modo span {
-    color: white;
-    font-size: 1.8em;
-    cursor: pointer;
 }
 
 .container-content{
@@ -82,10 +86,14 @@ header{
 .container-img-txt{
     padding-top: 2rem;
     border-radius: 10px;
-    border-bottom: white 1px solid;
+    border-bottom: black 2px double;
     padding-bottom: 6rem;
     display: flex;
     justify-content: center;
+    border-bottom: white 3px double;
+    box-shadow: -4px 7px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
 }
 .img-gif-der{
     height: 100%;
@@ -132,6 +140,17 @@ header{
     justify-content: center;
     align-items: center;
     color: white;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    width: 90%; /* Centra el texto */
+    background-color: #85858538;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.438);
 }
 .text-bienvenida h1{
     margin: 0;
@@ -195,16 +214,49 @@ header{
     transition: opacity 1s, transform 1s;
 }
 .modo{
-    width: 5%;
+    width: 12%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.modo span{
-    font-size: 1.3em;
+.modo i{
+    font-size: 2.2em;
+    color: white;
 }
-.modo span:hover{
+.modo i:hover{
     cursor: pointer;
-    font-size: 1.4em;
+}
+footer{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 8px;
+    background-color: #7438036e;
+    padding: 20px;
+    border-radius: 10px;
+    border: white 2px double;
+    box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
+}
+footer .imgF {
+    height: 6rem;
+    width: 18rem;
+}
+
+footer .Fredes{
+    margin-left: 40px;
+    gap: 12px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+footer .Fredes i{
+    font-size: 2em;
+}
+footer li{
+    color: white;
+    font-size: 1.1em;
+    list-style: none;
 }
