--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ header{
     box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    transition: all 1s;
 }
 
 .android{
@@ -56,7 +57,9 @@ header{
     border: white 2px double;
     box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: -11px 3px 5px 0px r
+    -moz-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
+    transition: all 1s;
+
 }
 .container-nav a {
     font-family: "Roboto";
@@ -94,6 +97,7 @@ header{
     box-shadow: -4px 7px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
+    transition: all 1s;
 }
 .img-gif-der{
     height: 100%;
@@ -125,7 +129,7 @@ header{
     opacity: 1;
 }
 .text-bienvenida{
-    background: linear-gradient(rgba(0, 0, 0, 0.450), rgba(0, 0, 0, 0.450)), url(../img-arquitec.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.450), rgba(0, 0, 0, 0.450)), url(../im1.png);
     background-size: cover;
     margin-top: 2rem;
     display: flex;
@@ -135,7 +139,7 @@ header{
     height: 35rem;
     text-align: center;
     margin: 2rem 3rem;
-    width: 68%;
+    width: 70%;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -150,7 +154,7 @@ header{
     width: 90%; /* Centra el texto */
     background-color: #85858538;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.438);
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.438);
 }
 .text-bienvenida h1{
     margin: 0;
@@ -179,7 +183,7 @@ header{
     justify-content: center;
     align-items: center;
     margin: 2rem 3rem;
-    width: 68%;
+    width: 70%;
     transition: all 1s;
 }
 .img-1{
@@ -239,10 +243,12 @@ footer{
     box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
+    transition: all 1s;
 }
 footer .imgF {
     height: 6rem;
     width: 18rem;
+    transform: translateX(7em);
 }
 
 footer .Fredes{
@@ -251,6 +257,9 @@ footer .Fredes{
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+footer .Ftelderechos{
+    transform: translateX(8em);
 }
 footer .Fredes i{
     font-size: 2em;
