--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,14 +6,17 @@
 body{
     max-width: auto;
     background-image: linear-gradient(to bottom, #aa5304, #bd6518, #d17729, #e48939, #f89c49);
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 header{
+    width: 85%;
     display: flex;
     justify-content: center;
     height: 10vh;
-    border-radius: 10px;
-    border-bottom:  white 1px inset;
+    border-radius: 20px;
+    border:  white 1px inset;
     box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
@@ -22,12 +25,13 @@ header{
 
 .android{
     position: absolute;
-    transform: translateX(-140px);
+    transform: translateX(-675px);
 }
 .android img{
     transform: translate(-50%, -50%);
     z-index: 1;
-    transform: rotate(-40deg);
+    transform: rotate(-45deg);
+    transition: all 3s;
 }
 
 .container-tittle{
@@ -46,15 +50,16 @@ header{
     height: 5.6rem;
 }
 .container-nav {
-    margin-top: 8px;
+    width: 85%;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     background-color: #3333336c;
     padding: 20px;
-    border-radius: 10px;
-    border: white 2px double;
+    border-radius: 20px;
+    border: white 2px inset;
     box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -11px 3px 5px 0px rgba(0,0,0,0.75);
@@ -78,7 +83,12 @@ header{
 }
 
 .container-content{
-    gap: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    margin-top: 12px;
+    margin-bottom: 6px;
 }
 .img-celu{
     height: 40rem;
@@ -87,13 +97,20 @@ header{
     border-radius: 3%;
 }
 .container-img-txt{
+    background: hsla(29, 95%, 34%, 1);
+    background: linear-gradient(to bottom, hsla(29, 95%, 34%, 1) 52%, hsla(28, 77%, 42%, 1) 77%, hsla(28, 67%, 49%, 1) 99%, hsla(28, 76%, 56%, 1) 100%, hsla(28, 93%, 63%, 1) 100%);
+    background: -moz-linear-gradient(to bottom, hsla(29, 95%, 34%, 1) 52%, hsla(28, 77%, 42%, 1) 77%, hsla(28, 67%, 49%, 1) 99%, hsla(28, 76%, 56%, 1) 100%, hsla(28, 93%, 63%, 1) 100%);
+    background: -webkit-linear-gradient(to bottom, hsla(29, 95%, 34%, 1) 52%, hsla(28, 77%, 42%, 1) 77%, hsla(28, 67%, 49%, 1) 99%, hsla(28, 76%, 56%, 1) 100%, hsla(28, 93%, 63%, 1) 100%);    
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#aa5304", endColorstr="#bd6518", GradientType=0);
+    margin-top: 2px;
+    width: 85%;
     padding-top: 2rem;
-    border-radius: 10px;
+    border-radius: 20px;
     border-bottom: black 2px double;
     padding-bottom: 6rem;
     display: flex;
     justify-content: center;
-    border-bottom: white 3px double;
+    border: white 1px inset;
     box-shadow: -4px 7px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -9px 7px 5px 0px rgba(0,0,0,0.75);
@@ -139,7 +156,7 @@ header{
     height: 35rem;
     text-align: center;
     margin: 2rem 3rem;
-    width: 70%;
+    width: 74%;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -153,7 +170,7 @@ header{
     height: 90%;
     width: 90%; /* Centra el texto */
     background-color: #85858538;
-    border-radius: 10px;
+    border-radius: 15px;
     box-shadow: 0 5px 7px rgba(0, 0, 0, 0.438);
 }
 .text-bienvenida h1{
@@ -232,13 +249,13 @@ header{
     cursor: pointer;
 }
 footer{
-    margin-top: 1rem;
+    width: 90%;
     display: flex;
     justify-content: space-around;
     margin-top: 8px;
-    background-color: #7438036e;
+    background-color: #40281229;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     border: white 2px double;
     box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: -6px 7px 5px 0px rgba(0,0,0,0.75);
@@ -268,4 +285,372 @@ footer li{
     color: white;
     font-size: 1.1em;
     list-style: none;
+}
+:root {
+    --animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    --animation-duration: 1s;
+    --animation-duration: 2s;
+}
+
+@-webkit-keyframes bounceInLeft {
+    from, 60%, 75%, 90%, to {
+        -webkit-animation-timing-function: var(--animation-timing-function);
+        animation-timing-function: var(--animation-timing-function);
+    }
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(-3000px, 0, 0);
+        transform: translate3d(-3000px, 0, 0);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: translate3d(25px, 0, 0);
+        transform: translate3d(25px, 0, 0);
+    }
+    75% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0);
+    }
+    90% {
+        -webkit-transform: translate3d(5px, 0, 0);
+        transform: translate3d(5px, 0, 0);
+    }
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes bounceInLeft {
+    from, 60%, 75%, 90%, to {
+        animation-timing-function: var(--animation-timing-function);
+    }
+    0% {
+        opacity: 0;
+        transform: translate3d(-3000px, 0, 0);
+    }
+    60% {
+        opacity: 1;
+        transform: translate3d(25px, 0, 0);
+    }
+    75% {
+        transform: translate3d(-10px, 0, 0);
+    }
+    90% {
+        transform: translate3d(5px, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@-webkit-keyframes bounceInRight {
+    from, 60%, 75%, 90%, to {
+        -webkit-animation-timing-function: var(--animation-timing-function);
+        animation-timing-function: var(--animation-timing-function);
+    }
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(3000px, 0, 0);
+        transform: translate3d(3000px, 0, 0);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: translate3d(-25px, 0, 0);
+        transform: translate3d(-25px, 0, 0);
+    }
+    75% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0);
+    }
+    90% {
+        -webkit-transform: translate3d(-5px, 0, 0);
+        transform: translate3d(-5px, 0, 0);
+    }
+    to {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes bounceInRight {
+    from, 60%, 75%, 90%, to {
+        animation-timing-function: var(--animation-timing-function);
+    }
+    from {
+        opacity: 0;
+        transform: translate3d(3000px, 0, 0);
+    }
+    60% {
+        opacity: 1;
+        transform: translate3d(-25px, 0, 0);
+    }
+    75% {
+        transform: translate3d(10px, 0, 0);
+    }
+    90% {
+        transform: translate3d(-5px, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@-webkit-keyframes bounceIn {
+    from, 20%, 40%, 60%, 80%, to {
+        -webkit-animation-timing-function: var(--animation-timing-function);
+        animation-timing-function: var(--animation-timing-function);
+    }
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    20% {
+        -webkit-transform: scale3d(1.1, 1.1, 1.1);
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        -webkit-transform: scale3d(0.9, 0.9, 0.9);
+        transform: scale3d(0.9, 0.9, 0.9);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: scale3d(1.03, 1.03, 1.03);
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        -webkit-transform: scale3d(0.97, 0.97, 0.97);
+        transform: scale3d(0.97, 0.97, 0.97);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+@keyframes bounceIn {
+    from, 20%, 40%, 60%, 80%, to {
+        animation-timing-function: var(--animation-timing-function);
+    }
+    0% {
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        transform: scale3d(0.9, 0.9, 0.9);
+    }
+    60% {
+        opacity: 1;
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        transform: scale3d(0.97, 0.97, 0.97);
+    }
+    to {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+@-webkit-keyframes zoomIn {
+    from {
+        opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes zoomIn {
+    from {
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@-webkit-keyframes bounceInDown {
+    from, 60%, 75%, 90%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -3000px, 0);
+    transform: translate3d(0, -3000px, 0);
+    }
+    60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 25px, 0);
+    transform: translate3d(0, 25px, 0);
+    }
+
+    75% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0);
+    }
+
+    90% {
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
+    }
+
+    to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes bounceInDown {
+    from, 60%, 75%, 90%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -3000px, 0);
+    transform: translate3d(0, -3000px, 0);
+    }
+
+    60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 25px, 0);
+    transform: translate3d(0, 25px, 0);
+    }
+
+    75% {
+    -webkit-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0);
+    }
+
+    90% {
+    -webkit-transform: translate3d(0, 5px, 0);
+    transform: translate3d(0, 5px, 0);
+    }
+
+    to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    }
+}
+
+.bounceInDown {
+    -webkit-animation-name: bounceInDown;
+    animation-name: bounceInDown;
+}
+.bounceInLeft {
+    -webkit-animation-name: bounceInLeft;
+    animation-name: bounceInLeft;
+}
+
+.bounceInRight {
+    -webkit-animation-name: bounceInRight;
+    animation-name: bounceInRight;
+}
+
+.bounceIn {
+    -webkit-animation-duration: 0.75s;
+    animation-duration: 1s;
+    -webkit-animation-name: bounceIn;
+    animation-name: bounceIn;
+}
+
+.zoomIn {
+    -webkit-animation-duration: 5s; /* Duración específica para zoomIn */
+    animation-duration: 5s;
+    -webkit-animation-name: zoomIn;
+    animation-name: zoomIn;
+}
+
+.animated {
+    -webkit-animation-duration: var(--animation-duration);
+    animation-duration: var(--animation-duration);
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+@-webkit-keyframes bounceInUp {
+    from, 60%, 75%, 90%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 3000px, 0);
+    transform: translate3d(0, 3000px, 0);
+    }
+
+    60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+    }
+
+    75% {
+    -webkit-transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0);
+    }
+
+    90% {
+    -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0);
+    }
+
+    to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes bounceInUp {
+    from, 60%, 75%, 90%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 3000px, 0);
+    transform: translate3d(0, 3000px, 0);
+    }
+
+    60% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0);
+    }
+
+    75% {
+    -webkit-transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0);
+    }
+
+    90% {
+    -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0);
+    }
+
+    to {
+-webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    }
+}
+.bounceInUp {
+    -webkit-animation-name: bounceInUp;
+    animation-name: bounceInUp;
 }
