--- a/static/css/style-contacto.css
+++ b/static/css/style-contacto.css
@@ -7,7 +7,7 @@ body{
     align-items: center;
 }
 header{
-    width: 85%;
+    width: 90%;
     display: flex;
     justify-content: center;
     height: 10vh;
@@ -31,7 +31,7 @@ header{
     opacity: 0.7;
     max-width: 100%;
     width: 22rem;
-    height: 5.6rem;
+    height: 6rem;
 }
 .container-nav {
     width: 85%;
@@ -161,12 +161,13 @@ header{
 }
 form {
     margin-bottom: 0;
-    background-color: #85858538;
+    background-color: #00000038;
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.438);
     max-width: 800px;
     width: 100%;
+    border: black 0.8px inset;
 }
 
 label {
