--- a/static/css/style-descargar.css
+++ b/static/css/style-descargar.css
@@ -119,13 +119,13 @@ header{
 }
 
 .text h2 {
-    margin-bottom: 4px;
-    font-size: 2.4rem;
-    color: #ffffff;
+    color: #f0b906;
+    margin: 0;
+    font-size: 2.6rem;
 }
 
 .text p {
-    margin-bottom: 2rem;
+    margin-top: 7px;
     text-align: center;
     font-size: 1.4rem;
     max-width: 600px;
@@ -133,6 +133,7 @@ header{
 }
 
 .text a {
+    margin-bottom: 3rem;
     text-decoration: none;
     font-size: 18px;
     color: white;
